Dont know how the hell the release version was a mix of two different versions !?!?!

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/ca_settings.page
@@ -37,12 +37,22 @@ foreach ($repoName as $display1) {
   $optionName = str_replace("'","*",$display1);
   $displayOptions .= mk_option($cfg['favourite'], $optionName, $display1);
 }
+
+$skins = array_diff(scandir("/usr/local/emhttp/plugins/community.applications/skins"),array(".",".."));
 ?>
 
 <form markdown="1" method="POST" action="/update.php" target="progressFrame">
 <input type="hidden" name="#file" value="<?=$plugin?>/<?=$plugin?>.cfg">
 
 > For help with this plugin, click here (a new tab will open with the help file)  <strong><font size="2"><a href="Settings/caHelp" target="_blank">HELP</a></font></strong>
+
+Display Skin:
+: <select name='skin' size='1'>
+<?foreach ($skins as $skin):
+  if ( ! is_dir("/usr/local/emhttp/plugins/community.applications/skins/$skin") ) continue;?>
+<?=mk_option($cfg['skin'],$skin,$skin)?>
+<?endforeach;?>
+</select>
 
 Time to display applications as new / updated:
 : <select name="timeNew" size="1">
@@ -99,17 +109,6 @@ Display Random App Of The Day:
 
 > This setting chooses whether to display or not a random "app of the day"
 
-Search bar is always in focus:
-: <select name='searchBarFocus' size='1'>
-	<?=mk_option($cfg['searchBarFocus'],'auto',"Automatic (default)")?>
-	<?=mk_option($cfg['searchBarFocus'],'yes',"Always in focus")?>
-	<?=mk_option($cfg['searchBarFocus'],'no',"Never in focus")?>
-	</select>
-	
-> Sets whether the search bar is always active (in focus).  When in focus, you can type anytime to search without having to click into the box.<br>
-> Automatic sets this to always in focus when using a computer, and not in focus when using a mobile device.<br>
-> If you have trouble searching, set this to be Never in focus
-
 <strong>Docker Hub Searching</strong>
 
 Enable additional search results from dockerHub?
@@ -125,8 +124,8 @@ Enable additional search results from dockerHub?
 Enable Template Developer Mode?
 : <select name='maintainer' size='1'>
   <?=mk_option($cfg['maintainer'],"no","No (Default)")?>
-	<?=mk_option($cfg['maintainer'],"yes","Yes")?>
-	</select>
+  <?=mk_option($cfg['maintainer'],"yes","Yes")?>
+  </select>
 
 &nbsp;
 : <input type="submit" name="#apply" value="Apply" id='Apply'><input type="button" id="DONE" value="Done" onclick="done()">
@@ -136,5 +135,4 @@ Enable Template Developer Mode?
 
 </form>
 <center><a href='https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=7M7CBCVU732XG' target='_blank'><img src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif"></a></center>
-
 
