--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -639,8 +639,11 @@ function readMore() {
 	$('.desc_readmore').readmore({maxHeight:100,moreLink:"<a href='#' class='myReadmore' title='Show More'><i class='fa fa-chevron-down myReadmoreButton'></i></a>",lessLink:"<a class='myReadmore' href='#' title='Show Less'><i class='fa fa-chevron-up myReadmoreButton'></i></a>"});
 }
 
-function doSearch(button) {
+function doSearch(button,newSearch) {
 	var windowWidth = getWindowWidth();
+  if ( ! newSearch === false ) {
+    $('#searchBox').val(newSearch);
+  }
 	var filter = $('#searchBox').val();
 	var maxPerPage = getPerPage();
 	resetSortByDate();
@@ -746,6 +749,7 @@ function forceUpdateButton() {
 		},
 		function(isConfirm) {
 			if (isConfirm) {
+        clearSearchBox();
 				$.post(URL,{action:'force_update_button'});
 				myAlert("Switching to Legacy Mode","Downloading <span id='downloadStatus'>Repository List</span>");
 				$.post(URL,{action:'downloadRepositories'},function(data) {
@@ -982,16 +986,6 @@ function dockerSearch(pageNumber) {
 			setToolTip();
 		}
 	});
-}
-
-function authorSearch(author) {
-	author = author.replace(/<(?:.|\n)*?>/gm, '');
-	$('#searchBox').val(author);
-
-	if ( $("#searchButton").hasClass('fa-search') ) {
-		$('#searchButton').toggleClass('fa-search fa-remove');
-	}
-	doSearch();
 }
 
 function dockerConvert(dockerID) {
