Minor adjustment to home button

--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/CommunityApps.page
@@ -1195,6 +1195,7 @@ function uninstallDocker(application,humanName) {
 }
 
 function appStore() {
+  mySpinner();
 	data.nextpage = 0;
 	data.prevpage = 0;
 	initializeAppStore();
