--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
@@ -153,4 +153,8 @@ input[type=checkbox] {
 	font-size:20px;
 	position:relative;
 	top:2px;
+  cursor:pointer;
+}
+.ca_multiselect {
+  cursor:pointer;
 }
