--- a/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
+++ b/source/community.applications/usr/local/emhttp/plugins/community.applications/skins/Wide/default.css
@@ -123,8 +123,7 @@ input[type=checkbox] {
 	font-weight:bold;
 }
 .donateLink {
-	color:black;
-	font-weight:bold;
+  font-size:12px;
 }
 .dockerHubStar {
 	color: magenta;
